@@ -7,10 +7,10 @@ solution: Experience Manager, Experience Manager Sites
 feature: Deploying
 role: Admin
 exl-id: 93dc74b3-dfe3-442f-9dec-1b7af41cd4a1
-source-git-commit: 93aa6218c36b52bfcd7a204e6f0b65871a4b365b
+source-git-commit: 5c7ead37f55175bb565f8661c0c156f76f135131
 workflow-type: tm+mt
 source-wordcount: '1563'
-ht-degree: 0%
+ht-degree: 2%
 
 ---
 
@@ -57,7 +57,7 @@ AEM的默认端口为4502。 如果该端口不可用或已在使用中，Quicks
 * [仅限Forms]以下是一个确保AEM Forms可与Java 17/Java21配合使用的示例，其中包括以下其他JVM参数：
 
 ```shell
---add-opens=java.base/java.util=ALL-UNNAMED -add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
 ```
 
 ## 运行模式 {#run-modes}
@@ -323,7 +323,7 @@ Web控制台。
 
 >[!NOTE]
 >
-> 对于全新的AEM 6.5 LTS安装，必须单独安装索引定义。 有关详细信息，请参阅[此](/help/sites-deploying/pre-upgrade-maintenance-tasks.md#index-definitions)。
+> 新安装 AEM 6.5 LTS 时，必须单独安装索引定义。更多信息请参阅[这里](/help/sites-deploying/pre-upgrade-maintenance-tasks.md#index-definitions)。
 
 ## 访问CRXDE Lite和Web控制台 {#accessing-crxde-lite-and-the-web-console}
 
